@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 0.9-1
-Date: 2012-11-27
-Packaged: 2012-10-24; dylan
+Version: 0.9-2
+Date: 2012-12-18
+Packaged: 2012-12-18; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
